# evonic

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  config.py  evonic  requirements.txt  run_improve.py  start.sh
backend/: agent_state.py  anthropic_foundry.py  event_stream.py  llm_client.py  logging_config.py  normalizer.py  plugin_hooks.py  plugin_lifecycle.py  plugin_manager.py  plugin_sdk.py  scheduler.py  setup.py  skills_manager.py  skillsets.py  slash_commands.py  super_agent_notifier.py
cli/: __init__.py  __main__.py  commands.py
defaults/: super_agent_kb.md  super_agent_system_prompt.md
docs/: CHAT_LOG_FORMAT.md  agent-to-agent-communication.md  backend-tools.md  claimguard-eval-setup.md  cot-tool-call-fallback.md  event-stream.md  message-flow.md  regex-evaluator-guide.md  specs_v2.md  system-prompt-hierarchy-guide.md  tools-defs-example.json
evaluator/: answer_extractor.py  api_logger.py  custom_evaluator.py  domain_evaluators.py  engine.py  extractor.py  gemma4_parser.py  llm_client.py  logger.py  qwen_parser.py  score_aggregator.py  scoring.py  sql_executor.py  test_loader.py  test_manager.py  tools.py
evonet/: Makefile  README.md  go.mod  main.go
improver/: __init__.py  analyzer.py  comparator.py  data_adjuster.py  data_generator.py  pipeline.py
lib/envcrypt/cli/: Cargo.toml
lib/envcrypt/cli/src/: main.rs
lib/envcrypt/libs/python/: README.md  pyproject.toml
lib/envcrypt/libs/python/envcrypt/: __init__.py  loader.py
lib/envcrypt/libs/python/tests/: test_loader.py
lib/envcrypt/libs/rust/: Cargo.toml
lib/envcrypt/libs/rust/src/: lib.rs
models/: chat.py  chatlog.py  db.py  schema.py
routes/: agents.py  auth.py  dashboard.py  evaluation.py  health.py  history.py  models.py  plugins.py  skills.py  (+4 more)
(+270 files in other folders)
