[package]
name = "envcrypt-lib"
version = "0.1.0"
edition = "2021"
description = "Library for loading encrypted .env files"
license = "MIT"

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
dirs = "5.0"
